fix(productcard): sold out comp z-index increase, fix isNew type

--- a/src/views/ProductImage.sass
+++ b/src/views/ProductImage.sass
@@ -8,7 +8,7 @@
   background-color: rgba(0,0,0,0.5)
   display: flex
   justify-content: center
-  z-index: inherit
+  z-index: 12
   align-items: center
   color: white
 
